<resources>
    <string name="app_name">Calculator</string>
    <string name="second_activity_title">Second activity</string>
    <string name="open_button_text">Open</string>
    <string name="my_application_title">My application</string>
    <string name="new_title">New title</string>
    <string name="calculator_title">Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="button_start_calculator">start calculator</string>
    <string name="plus_minus">+/-</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="button_zero">0</string>
    <string name="button_comma">,</string>
    <string name="button_equal">=</string>
</resources>