<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_green"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/dark_green_gray"
        android:padding="10dp"
        android:text="@string/calculator_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/plus_minus"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_number_1"
        app:layout_constraintStart_toStartOf="@+id/btn_number_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_number_1" />

    <Button
        android:id="@+id/btn_number_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_1"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_number_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_2"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
        app:layout_constraintStart_toEndOf="@id/btn_number_1"
        app:layout_constraintTop_toTopOf="@+id/btn_number_1" />


    <Button
        android:id="@+id/btn_number_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_3"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_number_2"
        app:layout_constraintStart_toEndOf="@id/btn_number_2"
        app:layout_constraintTop_toTopOf="@id/btn_number_2" />

    <Button
        android:id="@+id/btn_number_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_4"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn_number_1"
        app:layout_constraintStart_toStartOf="@id/btn_number_1"
        app:layout_constraintEnd_toEndOf="@id/btn_number_1" />

    <Button
        android:id="@+id/btn_number_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_5"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
        app:layout_constraintStart_toEndOf="@id/btn_number_4"
        app:layout_constraintTop_toTopOf="@+id/btn_number_4" />

    <Button
        android:id="@+id/btn_number_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/number_6"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_number_5"
        app:layout_constraintStart_toEndOf="@id/btn_number_5"
        app:layout_constraintTop_toTopOf="@id/btn_number_5" />

</androidx.constraintlayout.widget.ConstraintLayout>



